--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -344,6 +344,7 @@
                 <li><a href="#etica">Ética</a></li>
                 <li><a href="#tecnologia">Tecnología</a></li>
                 <li><a href="#equipo">Equipo</a></li>
+                <li><button id="btn-demo" onclick="window.location.href='demo.html'" style="background: #007bff; color: white; border: none; padding: 8px 16px; border-radius: 4px; cursor: pointer;">Demo</button></li>
             </ul>
         </nav>
     </header>
