--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -347,7 +347,7 @@
                 <li><a href="#equipo">Equipo</a></li>
                 <li>
                     <a href="demo.html" id="btn-demo"
-                       style="background:#007bff;color:#fff;border:none;padding:8px 16px;border-radius:4px;cursor:pointer;display:inline-block;text-decoration:none;">
+                        style="background:#007bff;color:#fff;border:none;padding:8px 16px;border-radius:4px;cursor:pointer;display:inline-block;text-decoration:none;">
                         Demo
                     </a>
                 </li>
@@ -413,17 +413,17 @@ dificultades, además de notificar inmediatamente en caso de una emergencia.
                     <p class="section-subtitle">Innovación que transforma realidades</p>
                     <div class="card">
                         <p class="section-description">
-                          Se emplea una arquitectura multiagentes basada en 
-                          <a href="https://arxiv.org/abs/2308.10848">AgentVerse</a> usando la plataforma de <a href="https://n8n.io/">n8n</a>. Un orquestador, tras procesar la entrada y su análisis de sentimientos, asigna a cada LLM (basado en ChatGPT 4.1) tanto un rol —uno como psicólogo y otro como adulto mayor de Medellín, Colombia— como una semilla para garantizar coherencia en la generación. Cada LLM participa en dos rondas de diálogo para generar la mejor respuesta al problema o pregunta planteada por el adulto mayor.
+                         Se emplea una arquitectura multiagentes basada en 
+                         <a href="https://arxiv.org/abs/2308.10848">AgentVerse</a> usando la plataforma de <a href="https://n8n.io/">n8n</a>. Un orquestador, tras procesar la entrada y su análisis de sentimientos, asigna a cada LLM (basado en ChatGPT 4.1) tanto un rol —uno como psicólogo y otro como adulto mayor de Medellín, Colombia— como una semilla para garantizar coherencia en la generación. Cada LLM participa en dos rondas de diálogo para generar la mejor respuesta al problema o pregunta planteada por el adulto mayor.
                         </p>
 
                         <p class="section-description">
-                          El sistema recibe como entrada un archivo de audio y devuelve otro archivo de audio con la respuesta generada. Además, si así se solicita, envía un reporte por correo electrónico con el análisis realizado al adulto mayor.
+                            El sistema recibe como entrada un archivo de audio y devuelve otro archivo de audio con la respuesta generada. Además, si así se solicita, envía un reporte por correo electrónico con el análisis realizado al adulto mayor.
                         </p>
                         <img src="arquitectura.png" alt="Diagrama de arquitectura" style="width:100%; margin: 1rem 0;">
 
                         <p class="section-description">
-                          En el diagrama también se incluye una base de datos de contexto, que almacena el historial de conversaciones y reportes anteriores de cada adulto mayor, permitiendo un seguimiento más completo y personalizado. Esta última parte queda para una nueva versión de la implementación.
+                            En el diagrama también se incluye una base de datos de contexto, que almacena el historial de conversaciones y reportes anteriores de cada adulto mayor, permitiendo un seguimiento más completo y personalizado. Esta última parte queda para una nueva versión de la implementación.
                         </p>
                     </div>
                 </div>
@@ -439,12 +439,20 @@ dificultades, además de notificar inmediatamente en caso de una emergencia.
                     <h1 class="section-title">Equipo</h1>
                     <p class="section-subtitle">Mentes brillantes, corazones unidos</p>
                     <div class="card">
-                        
-
-
-
-
-
+                        <div style="display: flex; justify-content: space-around; align-items: center; text-align: center; gap: 2rem;">
+                            <div>
+                                <img src="richard.jpg" alt="Ricardo Esteban Lopera Vasco" style="width:150px; height:150px; object-fit: cover;">
+                                <p>Ricardo Esteban Lopera Vasco</p>
+                            </div>
+                            <div>
+                                <img src="joan.jpg" alt="Joan Sebastian Salazar Montoya" style="width:150px; height:150px; object-fit: cover;">
+                                <p>Joan Sebastian Salazar Montoya</p>
+                            </div>
+                            <div>
+                                <img src="nixon.jpg" alt="Nixon Daniel Lizcano Santana" style="width:150px; height:150px; object-fit: cover;">
+                                <p>Nixon Daniel Lizcano Santana</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
