arrelgando más cositas

--- a/frontend/public/demo.html
+++ b/frontend/public/demo.html
@@ -89,7 +89,7 @@
     </style>
 </head>
 <body>
-    <a href="/" class="back-btn">← Volver</a>
+    <a href="index.html" class="back-btn">← Volver</a>
     
     <div class="container">
         <h1>🎤 ¡Háblale a tu voz de confianza!</h1>
