--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -410,7 +410,6 @@ dificultades, además de notificar inmediatamente en caso de una emergencia.
             <div class="container">
                 <div class="section-content">
                     <h1 class="section-title">Tecnología</h1>
-                    <p class="section-subtitle">Innovación que transforma realidades</p>
                     <div class="card">
                         <p class="section-description">
                          Se emplea una arquitectura multiagentes basada en 
@@ -437,7 +436,7 @@ dificultades, además de notificar inmediatamente en caso de una emergencia.
             <div class="container">
                 <div class="section-content">
                     <h1 class="section-title">Equipo</h1>
-                    <p class="section-subtitle">Mentes brillantes, corazones unidos</p>
+                    <p class="section-subtitle">Estudiantes de Ciencias de la Computación de la Universidad Nacional de Colombia, Sede Medellín</p>
                     <div class="card">
                         <div style="display: flex; justify-content: space-around; align-items: center; text-align: center; gap: 2rem;">
                             <div>
